baml_language/crates/baml_tests/snapshots/diagnostic_errors/namespaces_conflict/baml_tests__diagnostic_errors__namespaces_conflict__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.llm.Response {
  text: string
}
function user.llm.from_json(j: baml.json.json) -> user.llm.Response  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.llm.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
class user.llm.Response {
  body: string
  status: int
}
function user.llm.from_json(j: baml.json.json) -> user.llm.Response  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.llm.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
