baml_language/crates/baml_tests/snapshots/diagnostic_errors/namespaces_conflict/baml_tests__diagnostic_errors__namespaces_conflict__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.llm.Response {
  text: string
}
class user.llm.Response$stream {
  text: null | string
}
class user.llm.Response {
  body: string
  status: int
}
class user.llm.Response$stream {
  body: null | string
  status: null | int
}
