baml_language/crates/baml_tests/snapshots/diagnostic_errors/namespaces_conflict/baml_tests__diagnostic_errors__namespaces_conflict__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [validation] Error: Duplicate class `Response`
   ╭─[ a.baml:2:7 ]
   │
 2 │ class Response {
   │       ────┬───  
   │           ╰───── first defined as class here
   │
   ├─[ b.baml:2:7 ]
   │
 2 │ class Response {
   │       ────┬───  
   │           ╰───── duplicate class definition
   │ 
   │ Note: Error code: E0011
───╯
